--- a/client/src/components/movies-list/movielist.styles.css
+++ b/client/src/components/movies-list/movielist.styles.css
@@ -3,6 +3,9 @@
     /* flex-wrap: nowrap; */
     z-index: 1;
     margin-top: -1rem;
+    overflow-x: auto;
+    overflow-y: hidden;
+    margin-bottom: -2rem;
     /* overflow-x: auto;
     overflow-y: hidden;
     position: relative;
@@ -19,3 +22,63 @@
 .swiper-slide{
     width: 4rem;
 }
+
+.carousel-container{
+    height: 215px;
+    width: 100%;
+    position: relative;
+    display: flex;
+}
+
+.carousel-container .switchLeft,
+.carousel-container .switchRight{
+    color: rgba(156, 156, 156, 0.178);
+    margin-top: 1rem;
+    font-weight: bold;
+    height: 100%;
+    width: 45px;
+    line-height: 250px;
+    font-size: 25px;
+    text-align: center;
+    background-color: rgba(39, 39, 39, 0.116);
+    cursor: pointer;
+}
+
+.carousel-container .switchLeft:hover,
+.carousel-container .switchRight:hover{
+    color: rgba(156, 156, 156, 0.384);
+    background-color: rgba(39, 39, 39, 0.932);
+
+}
+
+.carousel-container .switchLeft {
+    position: absolute;
+    left: -20px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.carousel-container .switchRight {
+    position: absolute;
+    right: -20px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f100;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgba(136, 136, 136, 0.123);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
