--- a/client/src/routes/home/home.style.css
+++ b/client/src/routes/home/home.style.css
@@ -69,6 +69,52 @@
 .trending-now,
 .tv-shows,
 .children-family-tv,
-.Only-on-Netflix {
+.Only-on-Netflix,
+.trending {
   padding: 1rem;
+}
+
+.trending{
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+}
+.trend-num{
+  height: 250px;
+  width: 250px;
+  border: 2px solid black;
+  cursor: pointer;
+}
+
+.number{
+  position: relative;
+  margin-top: -2rem;
+  font-size: 15rem;
+  margin-right: 10rem;
+  flex-shrink: 0;
+  color: rgb(77, 77, 77);
+}
+
+.trend-mov{
+  position: relative;
+  margin-left: 5.5rem;
+
+  margin-top: -30rem;
+  height: 210px;
+  width: 140px;
+  border-radius: 5px;
+  background-color: rgb(122, 122, 122);
+}
+
+.top10-img{
+  height: 210px;
+  border-radius: 5px;
+  transition: all 1s;
+}
+
+.top10-img:hover{
+  transform: scale(1.1);
+}
+.swiper-slide{
+  margin-right: -65rem;
 }
